[gd_scene load_steps=9 format=3 uid="uid://cvcuw6wh2kmbu"]

[ext_resource type="Script" path="res://seagull.gd" id="1_3k0fv"]
[ext_resource type="Texture2D" uid="uid://btys3xeocorq2" path="res://gull.png" id="1_s47xc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qth0d"]
size = Vector2(12, 8)

[sub_resource type="Animation" id="Animation_niakj"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xn5e5"]
resource_name = "cruising"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_6a33c"]
resource_name = "take-off"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 2, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_fq28j"]
resource_name = "flap"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4ms0"]
_data = {
"cruising": SubResource("Animation_xn5e5"),
"flap": SubResource("Animation_fq28j"),
"idle": SubResource("Animation_niakj"),
"take-off": SubResource("Animation_6a33c")
}

[node name="gull" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 3
script = ExtResource("1_3k0fv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_qth0d")

[node name="gull_animations" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_s47xc")
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gull_animations"]
libraries = {
"": SubResource("AnimationLibrary_x4ms0")
}

[node name="timers" type="Node2D" parent="."]

[node name="turn_timer" type="Timer" parent="timers"]
wait_time = 3.0

[node name="animation_timer" type="Timer" parent="timers"]

[node name="land_timer" type="Timer" parent="timers"]
wait_time = 10.0
one_shot = true

[node name="flight_timer" type="Timer" parent="timers"]
one_shot = true

[node name="cruise_timer" type="Timer" parent="timers"]
one_shot = true

[connection signal="timeout" from="timers/turn_timer" to="." method="_on_turn_timer_timeout"]
[connection signal="timeout" from="timers/animation_timer" to="." method="_on_animation_timer_timeout"]
[connection signal="timeout" from="timers/land_timer" to="." method="_on_land_timer_timeout"]
[connection signal="timeout" from="timers/flight_timer" to="." method="_on_flight_timer_timeout"]
[connection signal="timeout" from="timers/cruise_timer" to="." method="_on_cruise_timer_timeout"]
